# dataset-public-laws-regulations-standards

./: .gitignore  CLAUDE.md  INDEX.md  METADATA-SCHEMA.md  PROMPT-CLASSIFICATION.md  README.md  SOURCES.md  TEMPLATE-PROCESSING-NOTES.md  TEMPLATE-README.json  TODO-REGISTRY.md  TODO.md
CSA/AICM/0.0.2/: AICM-Controls-Info.csv  AICM-Controls.csv  Architectural-Relevance-GenAI-Stack-Components-output.json  Architectural-Relevance-GenAI-Stack-Components.json  Organizational-Relevance.json  README.md  Sheet-Applicability-Mappings-BSI-AI-C4.json  Sheet-Architectural-Relevance-GenAI-Stack-Components.json  Sheet-Control-Type.json  Sheet-Lifecycle-Relevance.json  Sheet-Organizational-Relevance.json  Sheet-Threat-Category.json  Sheet-Typical-Control-Applicability-and-Ownership.json  Taxonomy-Assets-output.json  Taxonomy-Assets.json  Taxonomy-Control-Ownership.json  Taxonomy-Control-Type-output.json  Taxonomy-Control-Type.json  Taxonomy-Lifecycle-output.json  Taxonomy-Lifecycle.json  Taxonomy-Threat-Category-output.json  (+3 more)
MITRE/: README.md
MITRE/D3FEND/: README.md
NIST/: README.md  file
NIST/NIST.AI.100-2e2023/: NIST.AI.100-2e2023.md  NIST.AI.100-2e2023_meta.json
NIST/NIST.AI.600-1/: NIST.AI.600-1.md  NIST.AI.600-1_meta.json
NIST/NIST.CSWP.02042020-1/: NIST.CSWP.02042020-1.md
NIST/NIST.CSWP.31/: NIST.CSWP.31.md
NIST/NIST.SP.1800-13/: NIST.SP.1800-13.md
NIST/NIST.SP.800-218A/: NIST.SP.800-218A.md  NIST.SP.800-218A_meta.json
NIST/NIST.SP.800-226.ipd/: NIST.SP.800-226.ipd.md
NIST/NIST.SP.800-53r5/: NIST.SP.800-53r5_meta.json
NIST/NIST.TN.2111/: NIST.TN.2111.md  NIST.TN.2111_meta.json
companies/EQUIFAX/: CS_to_CIS_Mapping.json  CS_to_NIST_CSF_Mapping.json
companies/GCP/: README.md  get-all-sitemaps-secur-files.sh
companies/IBM/: IBM-Generative-AI-Controls-Framework-Whitepaper-Terms.json  README.json
companies/Microsoft/: README.md
control/fedramp.gov/: fedramp-metadata.json
control/ieee.org/: README.md
country/Canada/: README.md  README.md~
country/Germany/: README.md
country/OECD/: README.md
frameworks-guidance/industry/MITRE/CWE/scripts/: .gitignore  pyproject.toml
frameworks-guidance/industry/MITRE/CWE/scripts/cwe_ai_analysis/: classifiers.py  exporters.py  extractors.py  models.py
frameworks-guidance/industry/MITRE/CWE/scripts/output/: CWE-AI-Classifications-Report.md  CWE-AI-Classifications.csv  CWE-AI-Classifications.json  CWE-Basic-Data.csv
frameworks-guidance/industry/MITRE/CWE/scripts/tests/: test_classifiers.py  test_extractors.py  test_loaders.py  test_models.py
organizations/Anthropic/: README.md
organizations/CSA/: normalize-ccm-caiq-entry.py  split-ccm-stripped.py
organizations/OWASP/: README.md
organizations/PCI-DSS/: urls.txt
prompts/: PROMPT-ANALYSIS-2025-06-09.md
regulation/europa.eu/: extract_eu_regulation.py
regulation/gov.uk/: extract_uk_legislation.py
regulation/govinfo.gov/: extract_us_plaw.py
system-cards/OpenAI/: README.md
tools-resources/glossary-corpus/: README.md  cross-source.csv  cross-source.json  stats.md
tools-resources/prompts/: PROMPT-ANALYSIS-2025-06-09.md
tools-resources/utils/: audit_secid_alignment.py  backfill_desired_end_state.py  build_glossary_corpus.py  build_index.py  convert-HTML-to-Markdown.py  docx_to_md.py  marker-convert.sh  parse_fedramp_baseline.py  parse_fedramp_li_saas.py  parse_regulatory_sections.py  pdf_to_md.sh  pdf_to_md_via_gpu.sh  process-ATLAS-json.py  split-CSV-on-COLUMN.py  sync_originals_to_s3.sh  token-counter-chatgpt.py  token-counter.py
tools-resources/working/: AICM-Controls-Info.json  control-extraction-triage.csv  control-extraction-triage.md
utils/: convert-CSV-to-JSON-list.py  convert-HTML-to-Markdown.py  excel_to_csv.py  process-CWE-JSON.py  remove-BOM-from-CSV.sh
vendors/AWS/: README.md  convert-html-to-markdown-in-place.py
vendors/CISCO/: README.md
vendors/GCP/: get-all-sitemaps-secur-files.sh
vendors/IBM/: IBM-Generative-AI-Controls-Framework-Whitepaper-Domains.json  README.md
working/: AICM-Controls-Info.json  C4-AI_editable-sheet-2-Criteria.json  IBM-Generative-AI-Controls-Framework-Whitepaper-Controls.json  NIST.AI.600-1-processed.json  eu_ai_act-processed.json
(+2426 files in other folders)
